--- a/3_nengo/neuron-group.ipynb
+++ b/3_nengo/neuron-group.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "0a736eeb",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "7aad407b",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
     "\n",
     "with model:\n",
     "    # Input stimulus to drive the neural ensemble - Input sine wave\n",
-    "    stim = nengo.Node(lambda t: 2*np.sin(16 * t), label=\"input\")\n",
+    "    stim = nengo.Node(lambda t: np.sin(16 * t), label=\"input\")\n",
     "\n",
     "\n",
     "    # Ensemble with 100 LIF neurons\n",
@@ -41,7 +41,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
+   "id": "7bc0bd6a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#jupyter serverextension enable nengo_gui.jupyter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "810cd26e",
    "metadata": {},
    "outputs": [
@@ -49,12 +59,12 @@
      "data": {
       "text/html": [
        "\n",
-       "            <script type=\"text/javascript\" id=\"718f3666-53cd-4c0c-997b-be150df748a6\">\n",
+       "            <script type=\"text/javascript\" id=\"5125e45c-92be-462f-8086-851268a59333\">\n",
        "            {\n",
        "                let req = new XMLHttpRequest();\n",
        "                req.addEventListener(\"load\", function() {\n",
        "                    if (this.status != 200 && this.response != 'OK') {\n",
-       "                        let p = document.getElementById('718f3666-53cd-4c0c-997b-be150df748a6').parentNode;\n",
+       "                        let p = document.getElementById('5125e45c-92be-462f-8086-851268a59333').parentNode;\n",
        "                        p.innerHTML +=\n",
        "                            'The nengo_gui.jupyter notebook server ' +\n",
        "                            'extension was not loaded. Please activate it ' +\n",
@@ -81,7 +91,7 @@
      "data": {
       "application/vdom.v1+json": {
        "attributes": {
-        "id": "db49cf07-d9f0-4940-bd66-dc5a0aabc412"
+        "id": "ad26484a-ce1f-4500-906b-f156126fbc0a"
        },
        "children": [
         {
@@ -90,7 +100,7 @@
           "class": "cell",
           "frameborder": "0",
           "height": "600",
-          "src": "./nengo/51650/?token=56b6c8387a3014ff6409ec0e10140b88383d9ac5ebeb3728",
+          "src": "./nengo/60225/?token=02ce69aa5442dde76b62a3cb22ffaa02b065295d5827957f",
           "style": {
            "border": "1px solid #eee",
            "boxSizing": "border-box"
@@ -104,9 +114,9 @@
       },
       "text/html": [
        "\n",
-       "                <div id=\"22a68f33-2335-4d6f-9d33-c9ba6525490d\">\n",
+       "                <div id=\"325d85f2-f44e-4dcc-9cb5-4d13e1e5d5b7\">\n",
        "                    <iframe\n",
-       "                        src=\"./nengo/51650/?token=56b6c8387a3014ff6409ec0e10140b88383d9ac5ebeb3728\"\n",
+       "                        src=\"./nengo/60225/?token=02ce69aa5442dde76b62a3cb22ffaa02b065295d5827957f\"\n",
        "                        width=\"100%\"\n",
        "                        height=\"600\"\n",
        "                        frameborder=\"0\"\n",
