--- a/5_tvb/2d_oscillator_simulation.ipynb
+++ b/5_tvb/2d_oscillator_simulation.ipynb
@@ -10,7 +10,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/dominik/anaconda3/envs/brain/lib/python3.10/site-packages/tvb/datatypes/surfaces.py:63: UserWarning: Geodesic distance module is unavailable; some functionality for surfaces will be unavailable.\n",
+      "/Users/dominik/miniconda3/envs/brain/lib/python3.10/site-packages/tvb/datatypes/surfaces.py:63: UserWarning: Geodesic distance module is unavailable; some functionality for surfaces will be unavailable.\n",
       "  warnings.warn(msg)\n"
      ]
     }
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "c0e62521",
    "metadata": {},
    "outputs": [
@@ -83,19 +83,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "simulation took 19.67990016937256 seconds.\n"
+      "simulation took 19.61 seconds.\n"
      ]
     }
    ],
    "source": [
     "tic = time.time()\n",
     "t, y = run_sim(conn, 6e-2, 5e-4, simlen=2*60e3)\n",
-    "print(f'simulation took {time.time() - tic} seconds.')"
+    "print(f'simulation took {time.time() - tic:.2f} seconds.')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "5e9bb9cd",
    "metadata": {},
    "outputs": [
@@ -105,7 +105,7 @@
        "(119, 76, 76)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "4fd31193",
    "metadata": {},
    "outputs": [
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "feb79536",
    "metadata": {},
    "outputs": [],
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "38c27f09",
    "metadata": {},
    "outputs": [],
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "33943e30",
    "metadata": {},
    "outputs": [],
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "29268508",
    "metadata": {},
    "outputs": [
@@ -203,8 +203,16 @@
     }
    ],
    "source": [
-    "plot_roi_corr_map('rPFCVL') # lM1  rPCS"
+    "plot_roi_corr_map('rPFCVL') # lM1  rPCS "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a182eed",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
