--- a/2_brian2/IF_model.ipynb
+++ b/2_brian2/IF_model.ipynb
@@ -30,7 +30,7 @@
      "output_type": "stream",
      "text": [
       "WARNING    Removing unsupported flag '-march=native' from compiler flags. [brian2.codegen.cpp_prefs]\n",
-      "INFO       No numerical integration method specified for group 'neurongroup', using method 'exact' (took 0.09s). [brian2.stateupdaters.base.method_choice]\n"
+      "INFO       No numerical integration method specified for group 'neurongroup', using method 'exact' (took 0.10s). [brian2.stateupdaters.base.method_choice]\n"
      ]
     },
     {
@@ -61,7 +61,7 @@
     "\n",
     "plot(M.t/ms, M.v[0])\n",
     "xlabel('Time (ms)')\n",
-    "ylabel('v');\n"
+    "ylabel('v')\n"
    ]
   },
   {
